# minroot-vdf-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
crates/minroot-cat/: Cargo.toml
crates/minroot-cat/src/: interleave.rs  lib.rs  pipeline.rs  schedule.rs  target.rs  traced.rs
crates/minroot-core/: Cargo.toml
crates/minroot-core/src/: error.rs  field.rs  lib.rs  minroot.rs  montgomery.rs  polynomial.rs
crates/minroot-hdl/: Cargo.toml
crates/minroot-hdl/src/: bits_ext.rs  circuit.rs  clock_gate.rs  engine.rs  lib.rs  poly_mul.rs  poly_reduce.rs  poly_sqr.rs  synthesis.rs  tree.rs  types.rs
crates/minroot-sim/: Cargo.toml
crates/minroot-sim/src/: harness.rs  lib.rs  testbench.rs  vectors.rs  verify.rs
