[package]
name = "minroot-hdl"
version = "0.1.1"
description = "hdl-cat hardware blocks for MinRoot VDF"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
comp-cat-rs.workspace = true
minroot-core.workspace = true
minroot-cat.workspace = true
hdl-cat.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true

[features]
fpga = []
asic = []
